<resources>
    <string name="app_name">Canny</string>

    <!--Login Screen-->
    <string name="WelcomeMessage">Welcome to</string>
    <string name="Appname">Trolleyfy</string>
    <string name="WelcomeMessage2">You Book ! We Deliver !</string>
    <string name="SentOtp">Send OTP</string>
    <string name="GetStarted">Get Started</string>
    <string name="PhoneHint">Enter Your Number</string>

    <!--OTP screen-->
    <string name="OtpScreenText1">Please wait while we are</string>
    <string name="OtpScreenText2">auto verifying your</string>
    <string name="OtpScreenText3">number</string>
    <string name="OtpVerifying">Verifying OTP...</string>
    <string name="OtpButtonTxt">Verify OTP</string>
    <string name="OtpResend">Resend OTP ?</string>

    <!--MapScreen-->
    <string name="title_activity_maps">Map</string>
    <string name="MapCheckPin1">Please Enter Your</string>
    <string name="MapCheckPin2">Pin Code</string>
    <string name="MapButton">Check</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--Navigation Drawer-->
    <string name="menu_my_profile">My Profile</string>
    <string name="menu_address_book">Address Book</string>
    <string name="menu_rate">Rate Us</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_customer_support">Customer Support</string>
    <string name="Nav_logout">Logout</string>

    <!--Bottom Sheet-->
    <string name="bottom_order_info">Order Information</string>
    <string name="bottom_address">Address</string>
    <string name="bottom_delivery_slot">Delivery Slot</string>
    <string name="bottom_quantity">Quantity</string>
    <string name="bottom_price">Price</string>
    <string name="bottom_payment_method_text">Preferred Payment Method</string>
    <string name="bottom_payment_cash">Cash On Delivery</string>
    <string name="bottom_payment_online">Online Payment</string>
    <string name="bottom_book">Book Now</string>

    <!--Feedback -->

    <string name="feedback_title">Feedback</string>


</resources>
