<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/menu_profile"
                android:icon="@drawable/ic_profile"
                android:title="@string/menu_my_profile"/>
        <item
                android:id="@+id/menu_address"
                android:icon="@drawable/ic_address"
                android:title="@string/menu_address_book"/>
        <item
                android:id="@+id/menu_customer_support"
                android:icon="@drawable/ic_customer_support"
                android:title="@string/menu_customer_support"/>
        <item
                android:id="@+id/menu_rate_us"
                android:icon="@drawable/ic_rate"
                android:title="@string/menu_rate"/>
        <item
                android:id="@+id/menu_feedback"
                android:icon="@drawable/ic_feedback"
                android:title="@string/menu_feedback"/>
    </group>

    <!--<item android:title="Communicate">-->
        <!--<menu>-->
            <!--<item-->
                    <!--android:id="@+id/nav_share"-->
                    <!--android:icon="@drawable/ic_menu_share"-->
                    <!--android:title="@string/menu_share"/>-->
            <!--<item-->
                    <!--android:id="@+id/nav_send"-->
                    <!--android:icon="@drawable/ic_menu_send"-->
                    <!--android:title="@string/menu_send"/>-->
        <!--</menu>-->
    <!--</item>-->

</menu>
