<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent" android:background="@color/White"
                android:layout_height="match_parent"
                style="@style/BottomSheet"
                app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <LinearLayout android:id="@+id/container_modal"
                  android:layout_width="match_parent"
                  android:background="@color/colorPrimary"
                  android:layout_height="40dp">

        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  style="@style/WhiteText"
                  android:gravity="center"
                  android:text="@string/bottom_order_info"/>
    </LinearLayout>

    <TextView android:layout_width="match_parent"
              android:layout_marginTop="@dimen/bottom_margin_top"
              android:layout_marginLeft="@dimen/bottom_padding"
              style="@style/BottomText"
              android:id="@+id/bottom_address"
              android:layout_below="@+id/container_modal"
              android:text="@string/bottom_address"
              android:layout_height="wrap_content"/>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/address_recycler"
            android:orientation="horizontal"
            android:layout_below="@+id/bottom_address"
            android:layout_alignParentLeft="true"
            android:layout_width="match_parent"
            android:layout_height="@dimen/bottom_recycle_view_height"/>

    <TextView android:layout_width="match_parent"
              style="@style/BottomText"
              android:layout_marginTop="@dimen/bottom_margin_top"
              android:id="@+id/delivery_text"
              android:text="@string/bottom_delivery_slot"
              android:layout_height="wrap_content"
              android:layout_below="@id/address_recycler"


    />

    <com.google.android.material.chip.ChipGroup android:layout_width="wrap_content"
                                                android:id="@+id/timing_chip_group"
                                                android:layout_centerInParent="true"
                                                app:singleSelection="true"
                                                android:layout_marginLeft="@dimen/bottom_padding"
                                                android:layout_below="@id/delivery_text"
                                                android:layout_height="40dp">
        <com.google.android.material.chip.Chip android:layout_width="100dp"
                                               android:text="7-8 am"
                                               app:chipStrokeColor="@color/Black"
                                               android:width="1dp"
                                               android:soundEffectsEnabled="true"
                                               android:padding="2dp"
                                               style="@style/chipStyle"
                                               android:textAlignment="center"
                                               android:layout_height="40dp"/>
        <com.google.android.material.chip.Chip android:layout_width="100dp"
                                               android:text="4-6 pm"
                                               style="@style/chipStyle"
                                               android:textAlignment="center"
                                               android:layout_height="40dp"/>
    </com.google.android.material.chip.ChipGroup>

    <TextView android:layout_width="wrap_content"
              style="@style/BottomText"
              android:id="@+id/quantity_text"
              android:text="@string/bottom_quantity"
              android:layout_marginTop="@dimen/bottom_margin_top"
              android:layout_below="@id/timing_chip_group"
              android:layout_height="wrap_content"/>
    <include android:layout_below="@id/quantity_text"
             android:layout_width="100dp"
             android:id="@+id/plus_minus"
             android:layout_marginLeft="@dimen/bottom_padding"
             android:layout_height="40dp"
             layout="@layout/plus_minus_button" android:layout_marginStart="@dimen/bottom_padding"/>

    <TextView android:layout_width="156dp"
              style="@style/WhiteText"
              android:id="@+id/price_label"
              android:layout_below="@id/timing_chip_group"
              android:textColor="@color/Black"
              android:layout_marginTop="@dimen/bottom_margin_top"
              android:text="@string/bottom_price"
              android:gravity="start"
              android:textAlignment="textStart"
              android:layout_alignParentRight="true"
              android:layout_centerHorizontal="true"
              android:layout_height="wrap_content"/>

    <TextView android:layout_width="wrap_content"
              android:text="₹"
              android:id="@+id/rupees_symbol"
              android:layout_below="@id/price_label"
              android:textColor="@color/Red"
              android:textStyle="bold"
              android:fontFamily="@font/montserrat_semibold"
              android:gravity="start"
              android:textSize="@dimen/bottom_price_text_size"
              android:textAlignment="textStart"
              android:layout_alignLeft="@+id/price_label"
              android:layout_height="wrap_content"/>

    <TextView android:layout_width="wrap_content"
              android:text="1286"
              android:id="@+id/price_text"
              android:layout_below="@id/price_label"
              android:textColor="@color/Red"
              android:textStyle="bold"
              android:fontFamily="@font/montserrat_semibold"
              android:gravity="start"
              android:textSize="@dimen/bottom_price_text_size"
              android:textAlignment="textStart"
              android:layout_marginLeft="8dp"
              android:layout_toRightOf="@id/rupees_symbol"
              android:layout_height="wrap_content"/>
    <TextView android:layout_width="wrap_content"
              style="@style/BottomText"
              android:id="@+id/payment_label"
              android:layout_below="@id/plus_minus"
              android:layout_marginTop="@dimen/bottom_margin_top"
              android:text="@string/bottom_payment_method_text"
              android:layout_height="wrap_content"/>

    <RadioGroup android:layout_width="wrap_content"
                android:layout_marginLeft="@dimen/bottom_padding"
                android:id="@+id/radio_grp"
                android:layout_below="@id/payment_label"
                android:layout_height="wrap_content">
        <com.google.android.material.radiobutton.MaterialRadioButton
                android:layout_width="wrap_content"
                style="@style/bottom_payment_option_text"
                android:text="@string/bottom_payment_online"
                android:layout_height="wrap_content"/>
        <com.google.android.material.radiobutton.MaterialRadioButton
                android:layout_width="wrap_content"
                style="@style/bottom_payment_option_text"
                android:text="@string/bottom_payment_cash"
                android:layout_height="wrap_content"/>
    </RadioGroup>
    <com.google.android.material.button.MaterialButton
            android:layout_width="@dimen/btm_btn_width"
            android:layout_below="@id/radio_grp"
            android:text="@string/bottom_book"
            android:textAllCaps="false"
            android:textAlignment="center"
            android:textStyle="bold"
            android:backgroundTint="@color/colorAccent"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="@dimen/bottom_margin_top"
            android:layout_marginLeft="@dimen/bottom_padding"
            android:layout_height="@dimen/btm_btn_height"/>

</RelativeLayout>