<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   xmlns:android="http://schemas.android.com/apk/res/android"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">


    <fragment
            xmlns:map="http://schemas.android.com/apk/res-auto"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/map"
            tools:context=".Activity.MapsActivity"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            map:layout_constraintStart_toStartOf="@+id/zip_code" android:layout_marginTop="54dp"
            map:layout_constraintTop_toBottomOf="@+id/zip_code" map:layout_constraintEnd_toEndOf="@+id/zip_code"
            map:layout_constraintHorizontal_bias="0.0" android:layout_marginBottom="32dp"
            map:layout_constraintBottom_toTopOf="@+id/check_btn"/>
    <androidx.appcompat.widget.AppCompatImageButton android:layout_width="40dp"
                                                    android:src="@drawable/ic_arrow_back"
                                                    android:layout_height="40dp"
                                                    android:clickable="true"
                                                    android:focusable="true"
                                                    android:background="?attr/selectableItemBackgroundBorderless"
                                                    android:layout_marginTop="16dp"
                                                    app:layout_constraintTop_toTopOf="parent"
                                                    android:id="@+id/back_button" android:layout_marginStart="16dp"
                                                    app:layout_constraintStart_toStartOf="parent"
                                                    android:layout_marginLeft="16dp"/>

    <TextView android:layout_width="wrap_content" android:text="@string/MapCheckPin1"
              android:layout_height="0dp" android:textSize="@dimen/MapTextSize"
              app:layout_constraintEnd_toEndOf="parent"
              android:layout_marginRight="28dp"
              android:layout_marginEnd="28dp"
              android:id="@+id/textView9" app:layout_constraintTop_toBottomOf="@+id/back_button"
              app:layout_constraintStart_toEndOf="@+id/back_button"
              app:layout_constraintHorizontal_bias="0.0"/>
    <TextView android:layout_width="0dp" android:text="@string/MapCheckPin2"
              android:layout_height="wrap_content" android:textSize="@dimen/MapTextSize"
              android:id="@+id/textView8"
              app:layout_constraintStart_toStartOf="@+id/textView9"
              app:layout_constraintEnd_toEndOf="@+id/textView9" app:layout_constraintTop_toBottomOf="@+id/textView9"/>

    <me.philio.pinentry.PinEntryView android:layout_width="128dp"
                                     android:id="@+id/zip_code"
                                     app:pinInputType="number"
                                     app:digitWidth="36dp"
                                     app:digitHeight="36dp"
                                     app:mask=""
                                     app:digitTextColor="@color/DarkBlue"
                                     app:digitBackground="@drawable/ic_otp_digit"
                                     app:digitSpacing="16dp"
                                     app:numDigits="6"
                                     app:digitTextSize="11sp"
                                     android:layout_height="20dp"
                                     app:layout_constraintStart_toStartOf="@+id/textView8"
                                     app:layout_constraintEnd_toEndOf="@+id/textView8"
                                     app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="32dp"
                                     app:layout_constraintTop_toBottomOf="@+id/textView8"/>

    <com.google.android.material.button.MaterialButton android:layout_width="@dimen/OtpbuttonWidth"
                                                       android:layout_height="@dimen/OtpbuttonHeight"
                                                       android:id="@+id/check_btn"
                                                       android:text="@string/MapButton"
                                                       android:textAllCaps="false"
                                                       android:textColor="@color/White"
                                                       android:fontFamily="@font/montserrat_light"
                                                       android:backgroundTint="@color/colorAccent"
                                                       app:layout_constraintBottom_toBottomOf="parent"
                                                       android:layout_marginBottom="128dp"
                                                       app:layout_constraintStart_toStartOf="@+id/map"
                                                       app:layout_constraintEnd_toEndOf="@+id/map"
                                                       app:layout_constraintHorizontal_bias="0.0"/>


</androidx.constraintlayout.widget.ConstraintLayout>